whitespace fixing

--- a/components/vf-meta-information/vf-meta-information.scss
+++ b/components/vf-meta-information/vf-meta-information.scss
@@ -2,19 +2,21 @@
 
 .vf-meta-information {
   display: grid;
+
   & > div {
     margin: 0 8px;
     margin-bottom: 12px;
     padding-top: 12px;
   }
+
   & > div + div {
     border-top: 1px solid set-color(vf-color-gray-bright);
   }
 }
 
 .vf-meta-info__author {
-  display: inline-flex;
   align-content: center;
+  display: inline-flex;
 
   .vf-author__name {
     align-self: center;
@@ -28,9 +30,9 @@
   .vf-author--avatar {
     border: 1px solid black;
     border-radius: 500px;
-    height: 47px;
+    height: 48px;
     order: -1;
-    width: 47px;
+    width: 48px;
   }
 }
 
@@ -51,11 +53,13 @@
 
 .vf-meta-info__links {
   padding: 0;
+
   h6.vf-text--body-xs {
     color: set-color(vf-color-gray);
     font-weight: 400;
     margin-bottom: 8px;
   }
+
   .vf-link {
     display: block;
     margin-bottom: 4px;
@@ -64,6 +68,7 @@
 
 
 .vf-meta__comments {
+
   .vf-text--body-xs {
     color: set-color(vf-color-gray);
     margin: 0;
